# paulo

./: CMakeLists.txt  LICENSE  README.md  jira-card_test_template.md  main.cpp  pr_spack-test_template.md  pyproject.toml
notebooks/: amber.ipynb  ambertools.ipynb  gromacs.ipynb
notebooks/amber/: amber-v2.ipynb  amber.ipynb  amber.sbatch  amber_gpu.sbatch  amber_mpi.sbatch  ambertools.ipynb
notebooks/chemprop_v1/: chemprop_v1.ipynb
notebooks/chemprop_v2/: chemprop_v2.ipynb
notebooks/test/: bash.ipynb  octave.ipynb  r.ipynb  terminal.ipynb  widgets.ipynb
scripts/boltz/: test_1gpu_mpirun.sbatch  test_1gpu_srun.sbatch  test_nccl_mpirun.sbatch  test_nccl_srun.sbatch
src/paulo/: __init__.py  paulo.py
