[project]
name = "paulo"
version= "0.1"
authors = [
    { name = "Paulo Narvaez", email="paulo.narvaez@gilead.com"},
]
description = "Sample project"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/paulo-n-gilead/paulo"
Issues = "https://github.com/paulo-n-gilead/paulo/issues"